[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/general/fonts/EVA-Duarte.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/general/images/Default_Button.png" type="Texture" id=2]
[ext_resource path="res://scenes/gameplay/music/VolumeTestPlayer.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2048, 2048 )
margin_left = 50.0
margin_right = 75.0
margin_top = 75.0
margin_bottom = 50.0

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2048, 2048 )
margin_left = 50.0
margin_right = 75.0
margin_top = 75.0
margin_bottom = 50.0

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2048, 2048 )
margin_left = 50.0
margin_right = 75.0
margin_top = 75.0
margin_bottom = 50.0

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2048, 2048 )
margin_left = 50.0
margin_right = 75.0
margin_top = 75.0
margin_bottom = 50.0

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2048, 2048 )
margin_left = 50.0
margin_right = 75.0
margin_top = 75.0
margin_bottom = 50.0

[sub_resource type="DynamicFont" id=7]
size = 100
font_data = ExtResource( 1 )

[node name="MainMenu" type="MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1800.0
margin_bottom = 1000.0

[node name="MasterVolumeContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1680.0
margin_bottom = 37.0

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer/MasterVolumeContainer"]
margin_right = 256.0
margin_bottom = 37.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer/MasterVolumeContainer"]
margin_left = 842.0
margin_right = 1680.0
margin_bottom = 37.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 20
ticks_on_borders = true

[node name="MusicVolumeContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 1680.0
margin_bottom = 78.0

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer/MusicVolumeContainer"]
margin_right = 228.0
margin_bottom = 37.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer/MusicVolumeContainer"]
margin_left = 842.0
margin_right = 1680.0
margin_bottom = 37.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 20
ticks_on_borders = true

[node name="DoneButton" type="Button" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 412.0
margin_bottom = 328.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "Done"

[node name="VolumeTestPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="value_changed" from="VBoxContainer/MasterVolumeContainer/MasterVolumeSlider" to="." method="_on_VolumeSlider_value_changed" binds= [ "Master" ]]
[connection signal="value_changed" from="VBoxContainer/MusicVolumeContainer/MusicVolumeSlider" to="." method="_on_VolumeSlider_value_changed" binds= [ "Music" ]]
[connection signal="pressed" from="VBoxContainer/DoneButton" to="." method="_on_DoneButton_pressed"]
